--- a/hyperapp/server/sample_tree.resources.yaml
+++ b/hyperapp/server/sample_tree.resources.yaml
@@ -3,71 +3,73 @@ import:
   - legacy_service.server_identity
   - legacy_type.sample_tree.sample_tree_d
 
-tree_servant_factory:
-  type: attribute
-  object: legacy_module.server.sample_tree
-  attr_name: TreeServant
+definitions:
 
-tree_servant:
-  type: call
-  function: tree_servant_factory
+  tree_servant_factory:
+    type: attribute
+    object: legacy_module.server.sample_tree
+    attr_name: TreeServant
 
-tree_servant_get_items_method:
-  type: attribute
-  object: tree_servant
-  attr_name: get_items
+  tree_servant:
+    type: call
+    function: tree_servant_factory
 
-tree_servant_raw_method:
-  type: attribute
-  object: tree_servant
-  attr_name: raw
+  tree_servant_get_items_method:
+    type: attribute
+    object: tree_servant
+    attr_name: get_items
 
-tree_servant_describe_method:
-  type: attribute
-  object: tree_servant
-  attr_name: describe
+  tree_servant_raw_method:
+    type: attribute
+    object: tree_servant
+    attr_name: raw
 
-tree_servant_open_method:
-  type: attribute
-  object: tree_servant
-  attr_name: open
+  tree_servant_describe_method:
+    type: attribute
+    object: tree_servant
+    attr_name: describe
 
-tree_servant_open_method_mapped:
-  type: map_service
-  function: tree_servant_open_method
+  tree_servant_open_method:
+    type: attribute
+    object: tree_servant
+    attr_name: open
 
-raw_command:
-  type: rpc_command
-  identity: legacy_service.server_identity
-  servant: tree_servant_raw_method
-  state_attributes: ['current_key']
-  name: raw
+  tree_servant_open_method_mapped:
+    type: map_service
+    function: tree_servant_open_method
 
-describe_command:
-  type: rpc_command
-  identity: legacy_service.server_identity
-  servant: tree_servant_describe_method
-  state_attributes: ['current_key']
-  name: describe
+  raw_command:
+    type: rpc_command
+    identity: legacy_service.server_identity
+    servant: tree_servant_raw_method
+    state_attributes: ['current_key']
+    name: raw
 
-open_command:
-  type: rpc_command
-  identity: legacy_service.server_identity
-  servant: tree_servant_open_method_mapped
-  state_attributes: ['current_key']
-  name: open
+  describe_command:
+    type: rpc_command
+    identity: legacy_service.server_identity
+    servant: tree_servant_describe_method
+    state_attributes: ['current_key']
+    name: describe
 
-sample_tree_d:
-  type: call
-  function: legacy_type.sample_tree.sample_tree_d
+  open_command:
+    type: rpc_command
+    identity: legacy_service.server_identity
+    servant: tree_servant_open_method_mapped
+    state_attributes: ['current_key']
+    name: open
 
-sample_tree_service:
-  type: tree_service
-  identity: legacy_service.server_identity
-  servant: tree_servant_get_items_method
-  dir: [sample_tree_d]
-  key_attribute: key
-  commands:
-    - raw_command
-    - describe_command
-    - open_command
+  sample_tree_d:
+    type: call
+    function: legacy_type.sample_tree.sample_tree_d
+
+  sample_tree_service:
+    type: tree_service
+    identity: legacy_service.server_identity
+    servant: tree_servant_get_items_method
+    dir: [sample_tree_d]
+    key_attribute: key
+    commands:
+      - raw_command
+      - describe_command
+      - open_command
