--- a/hyperapp/server/server_ref_list.resources.yaml
+++ b/hyperapp/server/server_ref_list.resources.yaml
@@ -4,57 +4,59 @@ import:
   - legacy_service.server_identity
   - legacy_type.server_ref_list.server_ref_list_d
 
-server_ref_list_factory:
-  type: attribute
-  object: legacy_module.server.server_ref_list
-  attr_name: RefList
+definitions:
 
-server_ref_list:
-  type: call
-  function: server_ref_list_factory
+  server_ref_list_factory:
+    type: attribute
+    object: legacy_module.server.server_ref_list
+    attr_name: RefList
 
-ref_list_servant_factory:
-  type: attribute
-  object: legacy_module.server.server_ref_list
-  attr_name: RefListServant
+  server_ref_list:
+    type: call
+    function: server_ref_list_factory
 
-ref_list_servant_partial:
-  type: partial
-  function: ref_list_servant_factory
-  params:
-    web: legacy_service.web
-    ref_list: server_ref_list
+  ref_list_servant_factory:
+    type: attribute
+    object: legacy_module.server.server_ref_list
+    attr_name: RefListServant
 
-ref_list_servant:
-  type: call
-  function: ref_list_servant_partial
+  ref_list_servant_partial:
+    type: partial
+    function: ref_list_servant_factory
+    params:
+      web: legacy_service.web
+      ref_list: server_ref_list
 
-ref_list_servant_get_method:
-  type: attribute
-  object: ref_list_servant
-  attr_name: get
+  ref_list_servant:
+    type: call
+    function: ref_list_servant_partial
 
-ref_list_servant_open_method:
-  type: attribute
-  object: ref_list_servant
-  attr_name: open
+  ref_list_servant_get_method:
+    type: attribute
+    object: ref_list_servant
+    attr_name: get
 
-open_command:
-  type: rpc_command
-  identity: legacy_service.server_identity
-  servant: ref_list_servant_open_method
-  state_attributes: ['current_key']
-  name: open
+  ref_list_servant_open_method:
+    type: attribute
+    object: ref_list_servant
+    attr_name: open
 
-server_ref_list_d:
-  type: call
-  function: legacy_type.server_ref_list.server_ref_list_d
+  open_command:
+    type: rpc_command
+    identity: legacy_service.server_identity
+    servant: ref_list_servant_open_method
+    state_attributes: ['current_key']
+    name: open
 
-server_ref_list_service:
-  type: list_service
-  identity: legacy_service.server_identity
-  servant: ref_list_servant_get_method
-  dir: [server_ref_list_d]
-  key_attribute: id
-  commands:
-    - open_command
+  server_ref_list_d:
+    type: call
+    function: legacy_type.server_ref_list.server_ref_list_d
+
+  server_ref_list_service:
+    type: list_service
+    identity: legacy_service.server_identity
+    servant: ref_list_servant_get_method
+    dir: [server_ref_list_d]
+    key_attribute: id
+    commands:
+      - open_command
