--- a/hyperapp/async/resource/legacy_module.yaml
+++ b/hyperapp/async/resource/legacy_module.yaml
@@ -1,6 +1,6 @@
 import:
   code:
-    - common.resource.legacy_module
+    - resource.legacy_module
 provide:
   - async.resource.legacy_module
 require:
