--- a/hyperapp/async/resource/legacy_service.yaml
+++ b/hyperapp/async/resource/legacy_service.yaml
@@ -4,7 +4,7 @@ import:
       - builtin_service
       - module_service
   code:
-    - common.resource.legacy_service
+    - resource.legacy_service
 provide:
   - async.resource.legacy_service
 require:
