Move async/resource -> resource/async

--- a/hyperapp/resource/async/attribute.yaml
+++ b/hyperapp/resource/async/attribute.yaml
@@ -3,6 +3,6 @@ import:
     attribute:
       - attribute
 provide:
-  - async.resource.attribute
+  - resource.async.attribute
 require:
   - python_object_acreg
