--- a/hyperapp/resource/async/partial.yaml
+++ b/hyperapp/resource/async/partial.yaml
@@ -4,6 +4,6 @@ import:
       - param
       - partial
 provide:
-  - async.resource.partial
+  - resource.async.partial
 require:
   - python_object_acreg
