--- a/hyperapp/resource/async/legacy_service.yaml
+++ b/hyperapp/resource/async/legacy_service.yaml
@@ -6,6 +6,6 @@ import:
   code:
     - resource.legacy_service
 provide:
-  - async.resource.legacy_service
+  - resource.async.legacy_service
 require:
   - python_object_acreg
