Move some resources to new type

--- a/hyperapp/resource/registry.yaml
+++ b/hyperapp/resource/registry.yaml
@@ -2,5 +2,5 @@ import:
   code:
     - common.cached_code_registry
 provide:
-  - resource_type_registry
+  - resource_type_reg
   - python_object_creg
