--- a/hyperapp/resource/piece_ref.yaml
+++ b/hyperapp/resource/piece_ref.yaml
@@ -5,5 +5,6 @@ import:
 provide:
   - resource.piece_ref
 require:
-  - resource_type_registry
+  - resource_type_factory
+  - resource_type_reg
   - python_object_creg
