--- a/hyperapp/resource/rpc_command.yaml
+++ b/hyperapp/resource/rpc_command.yaml
@@ -1,6 +1,12 @@
 import:
   types:
+    resource_rpc_command:
+      - rpc_command
     rpc_command:
       - rpc_command
 provide:
   - resource.rpc_command
+require:
+  - resource_type_factory
+  - resource_type_reg
+  - python_object_creg
