Update server ref list

--- a/hyperapp/server/server_ref_list.resources.yaml
+++ b/hyperapp/server/server_ref_list.resources.yaml
@@ -44,7 +44,7 @@ definitions:
   open_command:
     type: rpc_command
     identity: legacy_service.server_identity
-    servant: ref_list_servant_open_method
+    function: ref_list_servant_open_method
     state_attributes: ['current_key']
     name: open
 
@@ -55,8 +55,8 @@ definitions:
   server_ref_list_service:
     type: list_service
     identity: legacy_service.server_identity
-    servant: ref_list_servant_get_method
-    dir: [server_ref_list_d]
+    function: ref_list_servant_get_method
+    dir: server_ref_list_d
     key_attribute: id
     commands:
       - open_command
