--- a/hyperapp/resource/typed_piece.yaml
+++ b/hyperapp/resource/typed_piece.yaml
@@ -1,4 +1,10 @@
+import:
+  types:
+    typed_piece:
+      - typed_piece
 provide:
   - resource.typed_piece
 require:
-  - resource_type_registry
+  - resource_type_factory
+  - resource_type_reg
+  - python_object_creg
