--- a/hyperapp/sync/subprocess_child.yaml
+++ b/hyperapp/sync/subprocess_child.yaml
@@ -3,7 +3,7 @@ import:
     - sync.subprocess_connection
 require:
   - service_failure
-  - ref_collector
+  - bundler
   - unbundler
   - transport
   - parcel_registry
