--- a/hyperapp/async/transport/tcp.yaml
+++ b/hyperapp/async/transport/tcp.yaml
@@ -5,7 +5,7 @@ import:
   code:
     - transport.tcp
 require:
-  - ref_collector
+  - bundler
   - unbundler
   - parcel_registry
   - async_route_table
