--- a/hyperapp/server/htest.resources.yaml
+++ b/hyperapp/server/htest.resources.yaml
@@ -2,7 +2,7 @@ import:
   - legacy_module.server.htest
   - legacy_service.mosaic
   - legacy_service.local_modules
-  - legacy_service.ref_collector
+  - legacy_service.bundler
   - legacy_service.file_bundle
   - legacy_service.subprocess
   - legacy_service.peer_registry
@@ -52,7 +52,7 @@ definitions:
     params:
       mosaic: legacy_service.mosaic
       local_modules: legacy_service.local_modules
-      ref_collector: legacy_service.ref_collector
+      bundler: legacy_service.bundler
       subprocess_factory: legacy_service.subprocess
       peer_registry: legacy_service.peer_registry
       rpc_call_factory: legacy_service.rpc_call_factory
