--- a/hyperapp/sync/transport/route_table.yaml
+++ b/hyperapp/sync/transport/route_table.yaml
@@ -2,7 +2,7 @@ import:
   code:
     - transport.route_table
 require:
-  - aux_ref_collector_hooks
+  - aux_bundler_hooks
   - aux_ref_unbundler_hooks
   - peer_registry
 provide:
