--- a/hyperapp/server/htest.resources.yaml
+++ b/hyperapp/server/htest.resources.yaml
@@ -2,6 +2,7 @@ import:
   - legacy_module.server.htest
   - legacy_service.mosaic
   - legacy_service.local_modules
+  - legacy_service.resource_type_reg
   - legacy_service.resource_module_registry
   - legacy_service.bundler
   - legacy_service.file_bundle
@@ -53,6 +54,7 @@ definitions:
     params:
       mosaic: legacy_service.mosaic
       local_modules: legacy_service.local_modules
+      resource_type_reg: legacy_service.resource_type_reg
       resource_module_registry: legacy_service.resource_module_registry
       bundler: legacy_service.bundler
       subprocess_factory: legacy_service.subprocess
