--- a/hyperapp/server/htest.resources.yaml
+++ b/hyperapp/server/htest.resources.yaml
@@ -15,6 +15,7 @@ import:
   - legacy_service.server_rpc_endpoint
   - server.htest_runner.runner_method_collect_attributes
   - server.htest_runner.get_function_result_type
+  - resource_ctr.global.construct_global
 
 definitions:
 
@@ -74,7 +75,7 @@ definitions:
       runner_signal_queue: runner_signal_queue
       runner_is_ready_fn_ref: runner_is_ready_fn_ref
       runner_method_collect_attributes_ref: runner_method_collect_attributes_ref
-      runner_method_get_function_result_type_ref: runner_method_get_function_result_type_ref
+      construct_global: resource_ctr.global.construct_global
 
   htest:
     type: call
