WIP: Python module loader: add imports

--- a/hyperapp/resource/fixtures.yaml
+++ b/hyperapp/resource/fixtures.yaml
@@ -2,6 +2,8 @@ import:
   types:
     python_module:
       - python_module
+  code:
+    - resource.python_module
 require:
   - resource_module_factory
   - resource_module_registry
