Python module resource type

--- a/hyperapp/resource/python_module.yaml
+++ b/hyperapp/resource/python_module.yaml
@@ -2,5 +2,8 @@ import:
   types:
     python_module:
       - python_module
+      - import_rec
+      - python_module_def
 require:
+  - resource_type_reg
   - python_object_creg
