--- a/hyperapp/server/test/test_resources/sample_python_module.resources.yaml
+++ b/hyperapp/server/test/test_resources/sample_python_module.resources.yaml
@@ -1,8 +1,11 @@
 import:
-  - legacy_type.construct_resources_sample.sample_item
+  - legacy_type.sample_python_module.sample_servant_d
+  - legacy_type.sample_python_module.sample_item
 definitions:
   sample_python_module:
     type: python_module
     module_name: sample_python_module
     file_name: sample_python_module.dyn.py
-    import_list: []
+    import_list:
+      htypes.sample_python_module.sample_servant_d: legacy_type.sample_python_module.sample_servant_d
+      htypes.sample_python_module.sample_item: legacy_type.sample_python_module.sample_item
